.metadata/.plugins/org.eclipse.cdt.ui/Chess.build.log
21:48:18 **** Incremental Build of configuration Debug for project Chess ****
make all 
Building file: ../src/Board.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Board.d" -MT"src/Board.d" -o "src/Board.o" "../src/Board.cpp"
../src/Board.cpp: In member function ‘bool Board::valid(int, int, Piece, Cell)’:
../src/Board.cpp:26:14: error: ‘class Cell’ has no member named ‘isEmpty’
     if (cell.isEmpty() != NULL){
              ^
../src/Board.cpp:30:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/Board.o] Error 1

21:48:18 Build Finished (took 235ms)

